[gd_scene load_steps=8 format=3 uid="uid://b7jl1v570rmh1"]

[ext_resource type="Texture2D" uid="uid://b0jiaqvc1pm5s" path="res://assets/laser_small.png" id="1_2fgtr"]
[ext_resource type="Script" path="res://scenes/projectiles/laser.gd" id="1_ptwyo"]
[ext_resource type="Script" path="res://components/move_component.gd" id="2_oudea"]
[ext_resource type="Script" path="res://components/scale_component.gd" id="4_odtva"]
[ext_resource type="Script" path="res://components/flash_component.gd" id="5_peyrd"]
[ext_resource type="Script" path="res://components/hitbox_component.gd" id="6_bf58v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y3218"]
size = Vector2(4, 8)

[node name="Laser" type="Node2D"]
script = ExtResource("1_ptwyo")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_2fgtr")

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("2_oudea")
actor = NodePath("..")
velocity = Vector2(0, -200)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(4.76837e-07, 1)
scale = Vector2(0.2, 0.4)

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("4_odtva")
sprite = NodePath("../Sprite2D")
scale_amount = Vector2(1.4, 1.4)
scale_duration = 1.0

[node name="FlashComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("5_peyrd")
sprite = NodePath("../Sprite2D")
flash_duration = 0.1

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("6_bf58v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_y3218")
